# land-of-opengl

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
cmake/: GLAD.cmake  glfw3.cmake  stb.cmake
include/: CMakeLists.txt
include/land_of_opengl/: app.h  shader_program.h
lib/: CMakeLists.txt  glew.cmake  glfw.cmake
lib/glfw/: CMakeLists.txt
src/: CMakeLists.txt  app.cc  main.cc  run.cc  shader_program.cc
src/shaders/: fragment.frag  vertex.vert
